--- a/atlas-postprocess-env.yaml
+++ b/atlas-postprocess-env.yaml
@@ -12,12 +12,12 @@ data:
   MONGO_DATABASE: atlas
   POSTGRES_PORT: "5432"
   POSTGRES_HOST: atlas-postgresql.atlas.svc.cluster.local
-  POSTGRES_PASSWORD: "elXOzwz0Bh"
+  POSTGRES_PASSWORD: T2I3MPgzue
   POSTGRES_USER: postgres
   POSTGRES_DATABASE: atlas
   QUEUE_NAME: AtlasAgentMessageQueue
   RABBIT_HOST: atlas-rabbitmq.atlas.svc.cluster.local
-  RABBIT_PASS: "b85t9DXJ7s"
+  RABBIT_PASS: KX2awowYQ6
   RABBIT_PORT: "5671"
   RABBIT_USER: user
   SOURCE_COLLECTION: AtlasAgentsMsg
