--- a/atlas-api-deploy.yaml
+++ b/atlas-api-deploy.yaml
@@ -49,7 +49,7 @@ spec:
               value: atlas-postgresql
             - 
               name: POSTGRES_PASSWORD
-              value: YXRsYXMK
+              value: T2I3MPgzue
             - 
               name: POSTGRES_PORT
               value: "5432"
